--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ port: 4100
 carpentry: "sp"
 
 # Overall title for pages.
-title: "SIH Training template FIXME 2"
-series_name: "FIXME Series 2"
+title: "SIH Introduction to Machine Learning in R"
+series_name: "Data Science Training"
 
 # What kind of thing is this ("workshop" or "lesson" or "series")?
 # IF THIS IS A LESSON, RENAME .lesson.index.md to index.md
@@ -31,7 +31,7 @@ bash: "no"
 git: "no"
 editor: "no"
 python: "no"
-R: "no"
+R: "yes"
 sqlite: "no"
 openrefine: "no"
 
@@ -51,7 +51,7 @@ email: "sih.training@sydney.edu.au"
 sih_site: "https://informatics.sydney.edu.au"
 sih_github: "https://github.com/Sydney-Informatics-Hub"
 sih_pages: "https://sydney-informatics-hub.github.io"
-series_home: "https://informatics.sydney.edu.au/training/" #edit if you want to point to series landing page
+series_home: "https://sydney-informatics-hub.github.io/190318-MLR" #edit if you want to point to series landing page
 training_home: "https://informatics.sydney.edu.au/training/" # edit if you want to point somewhere else except for SIH
 
 # Carpentries sites
